--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
 discord_webhook = https://discord.com/api/webhooks/891102848945893396/mS63_AWKYRJV_QJ2nv3_PihLbwHlfKqfKDD8UVjH1pEGEdGsIAVe7z0PUn1l-PAAeNZt
-mail = bertram.lorenzen93@gmail.com
+mail = Majalj33@gmail.com
 zalando_email = 08mikkelwissing@gmail.com
 zalando_password = mikkel123321
